--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v0.2.0
       with:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: "<YOUR-PROJECT-ID>"
+        project_id: "ckad-practice-420508"
         export_default_credentials: true
 
     - name: Set up credentials
