--- a/.github/workflows/terraform_validate.yml
+++ b/.github/workflows/terraform_validate.yml
@@ -31,6 +31,9 @@ jobs:
         echo "${{ secrets.GCP_SA_KEY }}" > gcp-key.json
         echo "gcp_credentials_file=gcp-key.json" >> $GITHUB_ENV
 
+    - name: List files for debugging
+      run: ls -l
+
     - name: Terraform Init
       run: terraform init
 
